[package]
authors = ["Mohammed Yaser Ali <m.y.ali3@ncl.ac.uk>"]
edition = "2021"
name = "recycle-wood"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

cumulus-primitives-core = { path = "../../../primitives/core", default-features = false }
cumulus-pallet-xcm = { path = "../../../pallets/xcm", default-features = false }

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
	"cumulus-primitives-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"pallet-insecure-randomness-collective-flip/std",

]
try-runtime = [
	"pallet-insecure-randomness-collective-flip/try-runtime",
]
